# GLeeFuzz

./: .gitignore  Dockerfile  LICENSE  README.md  build.md  mk_virtualenv.sh
chrome_patches/: README.md  custom_compiler_patch.patch  log_message.patch  wllvm-build.patch
experiment/: number_of_crash.py  time_break_down.py
fuzzer/: WebGLFuzzer.py  logging.ini  pkgs.txt
fuzzer/executor/: __init__.py  exec_log.py  executor.py  executor_builder.py
fuzzer/executor_defs/: executors_def_example.ini
fuzzer/fuzzer/: __init__.py  coverage_tracking.py  fuzzer.py  internal_state.py  runtime_message_parser.py  signal_handler.py
fuzzer/program/: __init__.py  config.py  gen_constraints.py  program.py
fuzzer/tools/: README.md  __log_analysis_v1.json  __log_analysis_v2.json  api_names_v1.txt  api_names_v2.txt  apidep_v1.pickle  apidep_v2.pickle  check_enum_args_empty_constraints.py  execute_program.py  (+8 more)
static-analysis/chrome-error-message-analyzer/tools/chrome-gl-analysis/: CMakeLists.txt  api_func_parse.cpp  err_msg_analysis.cpp  err_msg_dep_analysis.cpp  inst_visitor.hpp  llvm_utils.cpp  llvm_utils.hpp  svf_utils.cpp  svf_utils.hpp  util.cpp  util.h
static-analysis/chrome-error-message-analyzer/tools/chrome-gl-analysis/assets/api_specs/: v1.json  v2.json
static-analysis/chrome-error-message-analyzer/tools/chrome-gl-analysis/assets/api_to_fname/: v1.json  v2.json
static-analysis/chrome-error-message-analyzer/tools/chrome-gl-analysis/assets/webgl_ir/llvm-15/: chrome_build_args  chrome_commit_id
webgl-executor/: debug-auto.html  debug.html  index.html  test.html
(+226 files in other folders)
